name:                 json-processing
version:              0.1.0.0
synopsis:             Simple JSON Processing library
-- license:              Apache 2.0 license
homepage:
author:               Thomas Mahler
maintainer:           thma@apache.org
build-type:           Simple
cabal-version:        >=1.10

library
  build-depends:        base >= 4.7 && < 5, wl-pprint
  hs-source-dirs:       src
  default-language:     Haskell2010
