name:                 json-processing
version:              0.1.0.0
synopsis:             Simple JSON Processing library
homepage:             https://github.com/thma/json-processing
author:               Thomas Mahler
maintainer:           thma@apache.org
build-type:           Simple
cabal-version:        >=1.10

library
  build-depends:        base, wl-pprint
  hs-source-dirs:       src
  default-language:     Haskell2010

test-suite test-json-processing
    type:           exitcode-stdio-1.0
    hs-source-dirs: src, test
    main-is:        TestSuite.hs
    build-depends:  base, wl-pprint, parsec, Cabal, HUnit, test-framework, test-framework-hunit
    default-language:     Haskell2010

