name:                 json-processing
version:              0.1.0.0
synopsis:             Simple JSON Processing library
description:          Simple parsing and pretty printing of JSON data
license:              Apache
license-file:         LICENSE
category:             data
stability:            experimental
homepage:             https://github.com/thma/json-processing
author:               Thomas Mahler
maintainer:           thma@apache.org
build-type:           Simple
cabal-version:        >=1.10

source-repository head
  type:     git
  location: https://github.com/thma/json-processing.git

library
  build-depends:        base >= 4 && < 5, wl-pprint
  hs-source-dirs:       src
  build-depends:        base, wl-pprint, parsec, Cabal
  default-language:     Haskell2010

test-suite test-json-processing
    type:           exitcode-stdio-1.0
    hs-source-dirs: src, test
    main-is:        TestSuite.hs
    build-depends:  base, wl-pprint, parsec, Cabal, HUnit, test-framework, test-framework-hunit
    default-language:     Haskell2010

